force-app/main/default/objects/Vehicle_service_request__c/Vehicle_service_request__c.object-meta.xml
<CustomObject>
    <label>Vehicle service request</label>
    <nameField>
        <label>Vehicle service request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle service requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>