force-app/main/default/objects/Vehicle_service_request__c/fields/Vechile_Customer__c.field-meta.xml
<CustomField>
    <fullName>Vechile_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vechile Customer</label>
    <referenceTo>Vechile_Customer__c</referenceTo>
    <relationshipLabel>Vehicle service requests</relationshipLabel>
    <relationshipName>Vehicle_service_requests</relationshipName>
    <type>Lookup</type>
</CustomField>