force-app/main/default/objects/Vehicle_service_request__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vechcle__c</referenceTo>
    <relationshipLabel>Vehicle service requests</relationshipLabel>
    <relationshipName>Vehicle_service_requests</relationshipName>
    <type>Lookup</type>
</CustomField>